# ILI9488_Pico

./: .gitignore  CMakeLists.txt  README.md  README.zh.md  README_zh.md  build_pico.bat  deploy_to_pico.bat
examples/: CollisionX.cpp  CollisionX_README.md  ILI9488_TextReader.cpp  SnakeGame.cpp  ili9488_demo.c  ili9488_demo.cpp  ili9488_dice_physics_demo.c  ili9488_font_test.cpp  ili9488_graphics_demo.cpp  ili9488_modern_demo.cpp  ili9488_modern_graphics_demo.cpp  ili9488_modern_optimization_demo.cpp  ili9488_optimization_demo.c  ili9488_optimization_demo.cpp
fonts/: README.md  notosans_fonts.h  notosans_small_font.h
include/: ili9488.h  ili9488_colors.hpp  ili9488_driver.hpp  ili9488_gfx.h  ili9488_hal.h  ili9488_hal.hpp  pin_config.hpp
include/joystick/: joystick.hpp
include/microsd/: rw_sd.hpp
src/: ili9488.c  ili9488_driver.cpp  ili9488_font.c  ili9488_gfx.c  ili9488_hal.c
src/joystick/: joystick.cpp
src/microsd/: rw_sd.cpp
